--- a/public/index.html
+++ b/public/index.html
@@ -248,7 +248,7 @@
 
             const fetchQuestions = async () => {
                 try {
-                    const response = await fetch('/questions');
+                    const response = await fetch('/api/questions');
                     if (!response.ok) {
                         throw new Error(`Failed to load questions: ${response.statusText}`);
                     }
